# immigration-research

./: .gitignore  CLAUDE.md  CYCLE.md  GOALS.md  HUMAN.md  LICENSE  README.md  package-lock.json  package.json  sources
.claude/: checkpoint-autogen.md  checkpoint.md  loop-improve-findings.md  settings.json
.model-review/: 2026-06-16-immigration-audit-review-context.md  (+8 more)
casebank/: cb.py  (+4 more)
sources/iq-sex-diff/: addhealth_first_pass.py  addhealth_public_pair_probe.py  addhealth_school_surface_pass.py  build_nlscya_early_school_extract.py  build_nlsy79_sibling_pairs.py  build_public_archive_catalog.py  cache_nlsy_extracts.py  child_bridge_multi_anchor.py  child_bridge_rank_sensitivity.py  download_nces_onlinecodebook_assets.py  early_school_age_matched_alignment.py  early_school_score_alignment.py  eclsk2011_early_school_first_pass.py  eclsk_early_school_first_pass.py  els_wedge_first_pass.py  extract_eclsk2011_early_school.py  extract_eclsk_early_school.py  extract_nlsy_asvab_vars.py  ffcws_achievement_first_pass.py  german_wais4_effects.py  hsls_wedge_first_pass.py  hsls_wedge_refinement.py  icar_decomposition.py  map_nlscya_early_school.py  meta_analysis.py  nels_wedge_first_pass.py  nlscya_early_school_first_pass.py  nlsy79_first_pass.py  nlsy79_schooling_pass.py  nlsy79_stats_pipeline.py  nlsy97_behavior_evaluation_pass.py  nlsy97_course_causal_pass.py  nlsy97_piat_cat_pass.py  nlsy97_stage_a_pass.py  nlsy97_stats_pipeline.py  nlsy97_transcript_deep_pass.py  piaac_p1_age_stratified.py  piaac_p1_occupation_proxy.py  piaac_p1_stratified.py  pisa2018_dif_leaveout_pass.py  (+24 more)
(+643 files in other folders)
